# Claude-Hackathon-2025

./: .gitignore  INTERACTIVE_MODE_QUICKSTART.md  LICENSE  README.md  WEBAPP_INTEGRATION.md  example_webapp.py  gradio_image_augmentor.py  pyproject.toml
arkit_scenes/: __main__.py  interactive_editor.py
mm_editor/: __main__.py  gemini_editor.py
scripts/: gradio_image_augmentor.py  verify_setup.py
tests/: test_simple_webapp.py  test_webapp_integration.sh
